<resources>
    <string name="app_name">Pizzeria</string>
    <string name="pizzas">PIZZAS</string>
    <string name="pedidos">ORDERS</string>
    <string name="tvUsername">Username</string>
    <string name="etUsername">Insert the username</string>
    <string name="tvPassword">Password</string>
    <string name="etPassword">Insert the password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnExit">Exit</string>
    <string name="btnBack">Back</string>
    <string name="tvName">Name</string>
    <string name="etName">Insert the name</string>
    <string name="tvSurname">Surname</string>
    <string name="etSurname">Insert your surname</string>
    <string name="tvPhoneNumber">Phone number</string>
    <string name="etPhoneNumber">Insert your phone number</string>
    <string name="tvStreet">Street</string>
    <string name="etStreet">Insert your street name</string>
    <string name="tvTown">Town</string>
    <string name="etTown">Insert your town name</string>
    <string name="tvNumber">Number</string>
    <string name="etNumber">Insert your direction number</string>
    <string name="tvPostalCode">Postal code</string>
    <string name="etPostalCode">Insert your postal code</string>
    <string name="btnConfirm">Confirm</string>
    <string name="CamposIncompletos">You need to complete all the camps for continue</string>
    <string name="userExists">That users name is already used</string>
    <string name="perfil">PROFILE</string>
    <string name="tvCampPostalCode">Postal Code:</string>
    <string name="tvCampNumber">Direction Number:</string>
    <string name="tvCampTown">Town:</string>
    <string name="tvCampStreet">Street:</string>
    <string name="tvDatosDireccion">USERS DIRECTION DATES</string>
    <string name="tvCampEmployee">Employee(S/N):</string>
    <string name="tvCampPhoneNumber">Phone number:</string>
    <string name="tvCampSurname">Surname:</string>
    <string name="tvCampName">Name:</string>
    <string name="tvDatosUsuario">USERS DESCRIPTION</string>
    <string name="tvCampUsername">*usernamme*</string>
    <string name="notLogged">Users not logged</string>
    <string name="perdir">Order</string>
    <string name="pizzaName">Pizza´s Name:</string>
    <string name="tvTextDescription">INGREDIENTS AND DESCRITION:</string>
    <string name="tvPizzaDescription">Insert ingredients and important things</string>
    <string name="backNLoggin">You exit without loggin</string>
    <string name="userEmpty">The usernames camp is empty</string>
    <string name="userNotExists">Any user register with that username</string>
    <string name="incorrectPassword">Wrong password</string>
    <string name="passwordEmpty">The password camp is empty</string>
    <string name="unLogged">Logout Completed</string>
    <string name="registerCompleted">User created</string>
    <string name="NoOrders">That user don´t have any Order</string>
    <string name="tvIdOrder">ORDER Nº:</string>
    <string name="tvUserDescTit">USER´S ACOUNT INFORMATION</string>
    <string name="tvUserDirTit">USER´S DIRECTION INFORMATION</string>
    <string name="tvPizzaList">PIZZAS LIST</string>
    <string name="tvDrinkList">DRINKS LIST</string>
    <string name="tvOrderUsername">Username:</string>
    <string name="tvOrderFullName">Full Name:</string>
    <string name="tvOrderPhone">Contact Phone:</string>
    <string name="tvOrderFullDirection">Dir:</string>
    <string name="btnDelete">DELETE</string>
    <string name="tvOrderPrice">TOTAL PRICE:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questionDelete">Are you sure? Do you wanna delete the order?</string>
    <string name="orderNotExists">That order doesn´t exists</string>
    <string name="tvCard">~PIZZAS CARD~</string>
    <string name="btnOrder">ORDER</string>
    <string name="btnCustomiced">CUSTOM</string>
    <string name="tvComment">ORDER COMENTARY</string>
    <string name="btnDoOrder">CREATE ORDER</string>
    <string name="btnCarbonara">CARBONARA</string>
    <string name="btnMargarita">Margarita</string>
    <string name="btnAlemana">ALEMANA</string>
    <string name="btn4quesos">CUATRO QUESOS</string>
    <string name="btnHawaiana">HAWAIANA</string>
    <string name="btnChampiñones">Fungui/champiñones</string>
    <string name="btnVegetal">vegetal</string>
    <string name="tvPizzaPrice">PRICE:</string>
    <string name="tvNewPizza">~New Pizza~</string>
    <string name="pizzaDescription">Pizza´s Description:</string>
    <string name="btnCancel">CANCEL</string>
    <string name="btnCreatePizza">CREATE</string>
    <string name="tvFixedPrice">Fixed Prirce: 12€</string>
    <string name="tvExplicationPrice">*All the custom pizzas have the same fixed cost.*</string>
    <string name="etHintPName">Example: Pizza de mi Abuela</string>
    <string name="etHintPDesc">Ingredients and pizza details</string>
    <string name="pizzaExists">That pizza´s name is already used</string>
    <string name="pizzaCreated">Pizza creation succesfull</string>
    <string name="tvCreateOder">~Create Order~</string>
    <string name="tvPizzaSelection">SELECT YOUR PIZZAS AND ADD IT</string>
    <string name="btnAdd">ADD</string>
    <string name="tvListPizzaHelp">Click in the pizza for delete it from the list</string>
    <string name="tvOrderComentary">INSERT HERE A COMENTARY IF YOU WANT</string>
    <string name="btnCreateOrder">CREATE ORDER</string>
    <string name="etComentary">Insert here the comentary</string>
    <string name="orderCreated">Order Created Succesfully</string>
    <string name="pizzasListEmpty">You didn´t select any pizza</string>
    <string name="questionDrink">You don\'t wanna get drink?</string>
    <string name="dontDrink">CONTINUE</string>
    <string name="getDrink">I WANT DRINK</string>
    <string name="deleteOrderItem">Are you sure about delete that item?</string>
</resources>