<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@color/amarillo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvUsername"/>

            <EditText
                android:id="@+id/etNewUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/etUsername"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvPassword"/>

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/etPassword"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvName"/>

            <EditText
                android:id="@+id/etNewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/etName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvSurname"/>

            <EditText
                android:id="@+id/etNewSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/etSurname"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvPhoneNumber"/>

            <EditText
                android:id="@+id/etNewPhone"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:hint="@string/etPhoneNumber"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvStreet"/>

            <EditText
                android:id="@+id/etNewStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/etStreet"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvTown"/>

            <EditText
                android:id="@+id/etNewTown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/etTown"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvNumber"/>

            <EditText
                android:id="@+id/etNewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/etNumber"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvPostalCode"/>

            <EditText
                android:id="@+id/etNewPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/etPostalCode"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btnNewConfim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnConfirm"/>
                <Button
                    android:id="@+id/btnNewBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnBack"
                    android:onClick="back"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>