<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/amarillo"
    android:padding="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/tvNewPizza"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizzaName"/>
                <EditText
                    android:id="@+id/etNewPizzaN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etHintPName"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizzaDescription"/>
            <EditText
                android:id="@+id/etNewPizzaD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etHintPDesc"/>
            </LinearLayout>
        </ScrollView>


        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvFixedPrice"
        android:textAlignment="center"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvExplicationPrice"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <Button
            android:id="@+id/btnCreatePizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCreatePizza"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:onClick="back"/>

    </LinearLayout>

</LinearLayout>