<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@color/amarillo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvCampUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/tvCampUsername"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvDatosUsuario"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tvCampName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCampName"
                    android:layout_margin="5dp"/>
                <TextView
                    android:id="@+id/tvCampSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCampSurname"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/tvCampPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCampPhoneNumber"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/tvCampEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCampEmployee"
                    android:layout_margin="5dp"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvDatosDireccion"
                android:textStyle="bold"
                android:paddingTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">


                <TextView
                    android:id="@+id/tvCampStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCampStreet"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/tvCampTown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCampTown"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/tvCampNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCampNumber"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/tvCampPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCampPostalCode"
                    android:layout_margin="5dp"  />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnBack"
                android:onClick="back"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>