<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/amarillo">

    <ScrollView
        android:id="@+id/scrollviewPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/fondo_pedido">

            <TextView
                android:id="@+id/tvIdOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvIdOrder"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvUserDescTit"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/tvOrderUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvOrderUsername"/>

                    <TextView
                        android:id="@+id/tvOrderFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvOrderFullName"/>

                    <TextView
                        android:id="@+id/tvOrderContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvOrderPhone"/>

                </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvUserDirTit"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/tvOrderDir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvOrderFullDirection"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvPizzaList"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:background="@color/amarillo">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                    <TextView
                        android:id="@+id/tvOrderPizzas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </ScrollView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvDrinkList"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:background="@color/amarillo">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tvOrderDrinks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </ScrollView>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvComment"
                android:textStyle="bold"
                android:layout_margin="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tvComentary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </ScrollView>

            </LinearLayout>
            <TextView
                android:id="@+id/tvOrderPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/tvOrderPrice"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnBack"
                    android:onClick="back"/>

                <Button
                    android:id="@+id/btnDelete"
                    android:backgroundTint="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnDelete"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>