<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@color/amarillo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        android:layout_margin="25dp">

        <ImageView
            android:id="@+id/imgPizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/pizzaName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pizzaName"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTextDescription"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tvPizzaDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPizzaDescription"/>
    </ScrollView>

    <TextView
        android:id="@+id/tvPizzaPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/tvPizzaPrice"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnBack"
            android:onClick="back"/>

    </LinearLayout>

</LinearLayout>